W-14148981: Modularize `spring-config` modules